crates/scorecard/tests/trybuild/red_with_none_must_fail.stderr
error[E0308]: mismatched types
  --> tests/trybuild/red_with_none_must_fail.rs:24:9
   |
19 |     let _row = Row::coverage_delta_red(
   |                ----------------------- arguments to this function are incorrect
...
24 |         None,
   |         ^^^^ expected `String`, found `Option<_>`
   |
   = note: expected struct `String`
                found enum `Option<_>`
note: associated function defined here
  --> src/lib.rs
   |
   |     pub fn coverage_delta_red(
   |            ^^^^^^^^^^^^^^^^^^
